--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: fetch-latest-data-and-deploy
+name: build-and-deploy
 on:
   push:
     branches:
@@ -10,7 +10,7 @@ jobs:
         - uses: actions/checkout@v2
         - uses: actions/setup-node@v2
           with:
-            node-version: "14.x"
+            node-version: "16.14.0"
         - run: yarn
         - run: yarn build
         - uses: JamesIves/github-pages-deploy-action@4.1.7
