--- a/package.json
+++ b/package.json
@@ -97,7 +97,6 @@
     "html-webpack-plugin": "^5.5.0",
     "jquery": "^3.6.0",
     "jsdom": "^21.0.0",
-    "jspdf": "^2.5.1",
     "karma": "^6.3.9",
     "karma-base64-to-js-preprocessor": "^0.1.0",
     "karma-chai": "^0.1.0",
@@ -111,7 +110,6 @@
     "ncp": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "pre-commit": "^1.2.2",
-    "svg2pdf.js": "^2.2.1",
     "ts-loader": "^9.2.6",
     "typedoc": "^0.22.10",
     "typescript": "^4.5.2",
@@ -120,6 +118,10 @@
     "webpack-dev-server": "^4.7.0",
     "webpack-merge": "^5.8.0",
     "webpack-visualizer-plugin2": "^1.0.0"
+  },
+  "removedDeps": {
+    "svg2pdf.js": "^2.2.1",
+    "jspdf": "^2.5.1"
   },
   "optionalDependencies": {
     "gl": "^6.0.2"
